Fix wrapping on #16628

--- a/resources/assets/less/overrides.less
+++ b/resources/assets/less/overrides.less
@@ -1176,6 +1176,7 @@ th.text-right.text-padding-number-footer-cell {
 }
 
 code.single-line {
+  white-space: pre-wrap;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
